# FileOrganizer

./: README.md
FileOrganizer/: CMakeLists.txt
FileOrganizer/src/: CMakeLists.txt  main.cpp
FileOrganizer/src/core/: FileOperator.cpp  FileOperator.h  FileOrganizer.cpp  FileOrganizer.h  FileScanner.cpp  FileScanner.h  PatternMatcher.cpp  PatternMatcher.h  Plan.cpp  Plan.h
FileOrganizer/src/utils/: CommandLineParser.cpp  CommandLineParser.h  ProgressReporter.cpp  ProgressReporter.h
